--- a/pkg/website/home.tmpl
+++ b/pkg/website/home.tmpl
@@ -27,23 +27,6 @@
 	<div id=noOfClicks>0</div>
 </div>
 <h2>Pets</h2>
-<div>
-	<p><strong>Pets:</strong> {{ . | len }}</p>
-	{{ range . }}
-	<hr />
-	<p>Simon test</p>
-	<dl>
-		<dt>Name</dt>
-		<dd>{{ .Name }}</dd>
-		<dt>Sex</dt>
-		<dd>{{ .Sex }} ({{ if .Intact }}intact{{ else }}{{ if (eq .Sex "Female") }}spayed{{ else }}neutered{{ end }}{{
-			end }})</dd>
-		<dt>Age</dt>
-		<dd>{{ .Age }}</dd>
-		<dt>Breed</dt>
-		<dd>{{ replace .Breed "/" " & " }}</dd>
-	</dl>
-	{{ end }}
-</div>
+{{template "pets" .}}
 
 </html>
