--- a/pkg/website/home.tmpl
+++ b/pkg/website/home.tmpl
@@ -20,7 +20,7 @@
 	</div>
 </div>
 <h1>My terrible HTMX Golang other examples</h1>
-<h2>Target an ID</h2>
+<h2>Target an ID okay</h2>
 <div>
 	<button hx-get="/ClickCount" hx-trigger="click" hx-target="#noOfClicks">Click Me!
 	</button>
